objects/ChargentOrders__Payment_Request__c.object
<CustomObject>
    <fields>
        <fullName>Asset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Asset</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Payment Requests</relationshipLabel>
        <relationshipName>Payment_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ChargentOrders__Billing_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Billing Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Payment Requests</relationshipLabel>
        <relationshipName>Payment_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ChargentOrders__ChargentOrder__c</fullName>
        <label>Order</label>
        <referenceTo>ChargentOrders__ChargentOrder__c</referenceTo>
        <relationshipLabel>Payment Requests</relationshipLabel>
        <relationshipName>Payment_Requests</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ChargentOrders__Email_Address__c</fullName>
        <inlineHelpText>What email address should this Payment Request be sent to?
This will override the email address of the Contact.</inlineHelpText>
        <label>Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ChargentOrders__Hash_Sum__c</fullName>
        <externalId>true</externalId>
        <label>Hash Sum</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChargentOrders__Include_Parent_ID__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Include Parent ID</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ChargentOrders__Notes__c</fullName>
        <label>Notes</label>
        <length>512</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ChargentOrders__Pay_Link__c</fullName>
        <inlineHelpText>This link will take you to the payment page. Users may send this link directly to a payer.</inlineHelpText>
        <label>Pay Link</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ChargentOrders__Payment_Link_Formatted__c</fullName>
        <formula>HYPERLINK(ChargentOrders__Pay_Link__c , &apos;Payment Link&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payment Link Formatted</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChargentOrders__Payment_Request_Transaction_Type__c</fullName>
        <label>Payment Request Transaction Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Charge Full Amount</fullName>
                </value>
                <value>
                    <fullName>Authorize Full Amount</fullName>
                </value>
                <value>
                    <fullName>Authorize Minimum Amount</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ChargentOrders__Send_Payment_Request_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When you check this box it will automatically send a Payment Request Email, based on your defined default template.</inlineHelpText>
        <label>Send Payment Request Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ChargentOrders__Status__c</fullName>
        <inlineHelpText>This field shows the current state of the payment request.</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Created</fullName>
                    <default>true</default>
                    <label>Created</label>
                </value>
                <value>
                    <fullName>Manually Sent</fullName>
                </value>
                <value>
                    <fullName>Auto Sent</fullName>
                </value>
                <value>
                    <fullName>Paid</fullName>
                </value>
                <value>
                    <fullName>Canceled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Quote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quote</label>
        <referenceTo>Quote</referenceTo>
        <relationshipLabel>Chargent Payment Requests</relationshipLabel>
        <relationshipName>Chargent_Payment_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Payment Request</label>
    <listViews>
        <fullName>ChargentOrders__All</fullName>
        <columns>NAME</columns>
        <columns>ChargentOrders__ChargentOrder__c</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>ChargentOrders__Unpaid_Payment_Requests</fullName>
        <columns>NAME</columns>
        <columns>ChargentOrders__Billing_Contact__c</columns>
        <columns>ChargentOrders__Email_Address__c</columns>
        <columns>ChargentOrders__ChargentOrder__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ChargentOrders__Status__c</field>
            <operation>notEqual</operation>
            <value>Paid</value>
        </filters>
        <label>Unpaid Payment Requests</label>
    </listViews>
    <nameField>
        <displayFormat>{YYYY}{MM}{DD}-{0}</displayFormat>
        <label>Payment Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payment Requests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>ChargentOrders__Block_inactive_PR_transaction_types</fullName>
        <active>true</active>
        <errorConditionFormula>AND( OR( ISCHANGED(ChargentOrders__Payment_Request_Transaction_Type__c) , ISNEW() ),
              NOT( 
                    OR( 
                          IF( 
                              INCLUDES( 
                                  ChargentOrders__ChargentOrder__r.ChargentOrders__Gateway__r.ChargentBase__Available_PR_Transaction_Types__c,&quot;Authorize Full Amount&quot; ), 
                                      IF( 
                                          ISPICKVAL(ChargentOrders__Payment_Request_Transaction_Type__c,&quot;Authorize Full Amount&quot; ), true, false 
                                      ), 
                              false 
                          ), 
                          IF( 
                              INCLUDES( 
                                  ChargentOrders__ChargentOrder__r.ChargentOrders__Gateway__r.ChargentBase__Available_PR_Transaction_Types__c,&quot;Charge Full Amount&quot; ), 
                                  IF( 
                                  ISPICKVAL(ChargentOrders__Payment_Request_Transaction_Type__c,&quot;Charge Full Amount&quot; ), true, IF(ISPICKVAL(ChargentOrders__Payment_Request_Transaction_Type__c,&quot;&quot; ),true, false) 
                              ), 
                          false 
                          ), 
                          IF( 
                              INCLUDES( 
                              ChargentOrders__ChargentOrder__r.ChargentOrders__Gateway__r.ChargentBase__Available_PR_Transaction_Types__c,&quot;Authorize Minimum Amount&quot; ), 
                              IF( 
                              ISPICKVAL(ChargentOrders__Payment_Request_Transaction_Type__c,&quot;Authorize Minimum Amount&quot; ), true, false 
                          ), 
                          false 
                          ),
                           IF( 
                              ISBLANK( 
                                  ChargentOrders__ChargentOrder__r.ChargentOrders__Gateway__r.ChargentBase__Available_PR_Transaction_Types__c), 
                                  IF( 
                                        ISPICKVAL(ChargentOrders__Payment_Request_Transaction_Type__c,&quot;Charge Full Amount&quot; ), true, IF(ISPICKVAL(ChargentOrders__Payment_Request_Transaction_Type__c,&quot;&quot; ), true, false)
                                  ), 
                          false 
                          )
                  ) 
          ) 
  )</errorConditionFormula>
        <errorDisplayField>ChargentOrders__Payment_Request_Transaction_Type__c</errorDisplayField>
        <errorMessage>Transaction Type is not allowed.</errorMessage>
    </validationRules>
</CustomObject>